# DocCrate

./: .gitignore  Cargo.toml  LICENSE  README.md  USER_GUIDE.md  build_all.sh  doccrate.json
.github/workflows/: gumroad-build.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/desktop/: Cargo.toml  tauri.conf.json
crates/desktop/icons/: icon.icns
crates/desktop/src/: main.rs
my_notes/: test_page.md
ui/: index.html
